--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <title>About Me</title>
 </head>
 <body>
-    <header>
+    <div class="headerbar">
+        <header>
         <div class="toptab">Jeannette Kunzen</div>
             <div class="navtab"> 
                 <div class="navtab1">About</div>
                 <div class="navtab2">Portfolio</div> 
                 <div class="navtab3">Contact</div>
             </div>
-    </header>
+        </header>
+    </div>
     <section>
         <h1>About Me</h1>
         <p>Hello and welcome to my website! My name is Jeannette Kunzen. My friends would describe me as loyal, honest and artistic. Back in 2005 I graduated from 
