added bio image and changed about me content

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
         </header>
     </div>
     <section>
+        <img src="assets/images/author.png">
         <h1>About Me</h1>
-        <p>Hello and welcome to my website! My name is Jeannette Kunzen. My friends would describe me as loyal, honest and artistic. Back in 2005 I graduated from 
-        the Savannah College of Art & Design (SCAD) with a BFA in Graphic Design which was followed by an 11 year career at Harcourt School Publishers.</p>
-        <p>After this my technical design knowledge has been applied to leasing and sales support materials at a Commercial Real Estate company, going on three years. 
-        To balance my tendency toward company loyalty I also like to keep busy with new and varied experiences. Some examples of side jobs I have taken include working at a convenience store and painting murals.</p>
-        Orlando has been home for the past 15 years with family roots that go back 3 generations, and I spent the first 18 years of my life in South Florida while my father practiced architecture there.
-        Other places I've lived include Savannah, Georgia and Durham, North Carolina. Despite being a native Floridian I've been snow skiing since the age of 10 during family trips to Utah and Colorado.</p> 
-        <p>My hobbies include fitness, crafts, and motorcyles. My ideal vacation would be spent traveling overseas. Some countries I've visited on my own include Austria and India.
-        My husband and I are becoming seasoned travelers to Japan and try to get over there at least once a year. 
+        <p>Well how about that, you made it! 
+            You found the personal and professional documentation of Jeannette Kunzen. 
+            What you do with this information is subject to your own peril, but please- take a look around, feel free to get cozy and maybe light a candle. 
+            Tell me, can you remember the last time you sat down to look at a website? 1998? 
+            Well you see, there are some magical things that never change, like the corner Italian restaurant that still uses those "Map of Italy" placemats. 
+            In spite of all the Olive Gardens and Pizza Huts, these fun little places can be found whenever you need one and are always open for lunch. 
+            I happen to feel that way about websites, too. Especially the lunch part! 
+            It's a great time to look at websites while you eat your leftover spaghetti.
         </p>
     </section>
 
