--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="headerbar">
@@ -22,7 +23,7 @@
             You found the personal and professional documentation of Jeannette Kunzen. 
             What you do with this information is subject to your own peril, but please- take a look around, feel free to get cozy and maybe light a candle. 
             Tell me, can you remember the last time you sat down to look at a website? 1998? 
-            Well you see, there are some magical things that never change, like the corner Italian restaurant that still uses those "Map of Italy" placemats. 
+            Well you see, there are some magical things that never change... like the corner Italian restaurant that still uses those "Map of Italy" placemats. 
             In spite of all the Olive Gardens and Pizza Huts, these fun little places can be found whenever you need one and are always open for lunch. 
             I happen to feel that way about websites, too. Especially the lunch part! 
             It's a great time to look at websites while you eat your leftover spaghetti.
@@ -30,7 +31,7 @@
     </section>
 
     <footer>
-        copyright
+        copyright &copy;  1983-2019 
     </footer>
 
     
