adding font styles, added div structure to index.html, styled footer

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="headerbar">
+    <div class="wrapper">
         <header>
-        <div class="toptab">Jeannette Kunzen</div>
+        <div class="toptab">
+            Jeannette Kunzen
+        </div>
             <div class="navtab"> 
                 <div class="navtab1">About</div>
                 <div class="navtab2">Portfolio</div> 
                 <div class="navtab3">Contact</div>
             </div>
         </header>
-    </div>
-    <section>
+    <section class="main">
         <img src="assets/images/author.png">
         <h1>About Me</h1>
         <p>Well how about that, you made it! 
@@ -29,9 +30,9 @@
             It's a great time to look at websites while you eat your leftover spaghetti.
         </p>
     </section>
-
+    </div>
     <footer>
-        copyright &copy;  1983-2019 
+        <p>copyright&copy;  1983-2019</p> 
     </footer>
 
     
