--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+   <div class="footwrapper"> 
     <div class="wrapper">
         <header>
         <div class="toptab">
@@ -34,6 +35,7 @@
     <footer>
         <p>copyright&copy;  1983-2019</p> 
     </footer>
+    </div>
 
     
 </body>
