--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 <body>
    <div class="footwrapper"> 
     <div class="wrapper">
-        <header>
-        <div class="toptab">
-            Jeannette Kunzen
+        <div class="header">
+            <div class="toptab"><h1>Jeannette Kunzen</h1></div>
+                <div class="navtab"> 
+                    <div class="navtab1">About</div>
+                    <div class="navtab2">Portfolio</div> 
+                    <div class="navtab3">Contact</div>
+                </div>
         </div>
-            <div class="navtab"> 
-                <div class="navtab1">About</div>
-                <div class="navtab2">Portfolio</div> 
-                <div class="navtab3">Contact</div>
-            </div>
-        </header>
     <section class="main">
         <img src="assets/images/author.png">
         <h1>About Me</h1>
