fine tuning header div. fixed footer to the bottom of page

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
    <div class="footwrapper"> 
     <div class="wrapper">
         <div class="header">
-            <div class="toptab"><h1>Jeannette Kunzen</h1></div>
-                <div class="navtab"> 
+                    <div class="nametab"><h1>Jeannette Kunzen</h1></div>
                     <div class="navtab1">About</div>
                     <div class="navtab2">Portfolio</div> 
                     <div class="navtab3">Contact</div>
-                </div>
         </div>
     <section class="main">
-        <img src="assets/images/author.png">
-        <h1>About Me</h1>
+        <div class="topic"><h1>About Me</h1></div>
+        <div class="image box"><img src="assets/images/author.png"></div>
         <p>Well how about that, you made it! 
             You found the personal and professional documentation of Jeannette Kunzen. 
             What you do with this information is subject to your own peril, but please- take a look around, feel free to get cozy and maybe light a candle. 
@@ -30,6 +28,7 @@
         </p>
     </section>
     </div>
+
     <footer>
         <p>copyright&copy;  1983-2019</p> 
     </footer>
