fine tuning center area and top navigation tabs on header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="navtab3">Contact</div>
         </div>
     <section class="main">
-        <div class="topic"><h1>About Me</h1></div>
+        <div class="topic"><h1>About Me<br><hr></h1></div>
         <div class="image box"><img src="assets/images/author.png"></div>
         <p>Well how about that, you made it! 
             You found the personal and professional documentation of Jeannette Kunzen. 
