--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <div class="wrapper">
         <div class="header">
                     <div class="nametab"><h1>Jeannette Kunzen</h1></div>
-                    <div class="navtab1">About</div>
-                    <div class="navtab2">Portfolio</div> 
-                    <div class="navtab3">Contact</div>
+                    <div class="navtab1"><a href=index.html>About</a></div>
+                    <div class="navtab2"><a href="portfolio.html">Portfolio</a></div> 
+                    <div class="navtab3"><a href="contact.html">Contact</a></div>
         </div>
     <section class="main">
         <div class="topic"><h1>About Me<br><hr></h1></div>
-        <div class="image box"><img src="assets/images/author.png"></div>
-        <p>Well how about that, you made it! 
+        <div class="content">    
+        <div class="imagebox"><p><img src=assets/images/author.png></p></div>
+            <p>Well how about that, you made it! 
             You found the personal and professional documentation of Jeannette Kunzen. 
             What you do with this information is subject to your own peril, but please- take a look around, feel free to get cozy and maybe light a candle. 
             Tell me, can you remember the last time you sat down to look at a website? 1998? 
             Well you see, there are some magical things that never change... like the corner Italian restaurant that still uses those "Map of Italy" placemats. 
             In spite of all the Olive Gardens and Pizza Huts, these fun little places can be found whenever you need one and are always open for lunch. 
             I happen to feel that way about websites, too. Especially the lunch part! 
-            It's a great time to look at websites while you eat your leftover spaghetti.
-        </p>
+            It's a great time to look at websites while you eat your leftover spaghetti.</p>
+        </div>
     </section>
     </div>
 
