adding image boxes with description to portfolio page

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         </div>
     <section class="main">
         <div class="topic"><h1>Contact<br><hr></h1></div>
-        <div class="content">    
+            <div class="form-area">
             <p>Name</p>
             <textarea></textarea><br>
             <p>Email</p>
@@ -24,6 +24,7 @@
             <p>Message</p>
             <textarea></textarea><br>
             <Button>Submit</Button>
+            </div>
         </div>
     </section>
     </div>
