--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,15 @@
         </div>
     <section class="main">
         <div class="topic"><h1>Portfolio<br><hr></h1></div>
-        <div class="content">    
-            <figure class="image1"></div>
-            <figure class="image1"></div>
-                <figure class="image1"></div>
-                <figure class="image1"></div>
-                    <figure class="image1"></div>
+        <div class="container">    
+            <div class="image1">                   
+                <img               
+                src="assets/images/rat.png"             
+                alt="Rat"            
+                width="250" height="180"             
+                />  
+                <div class="projectname">Rat 1</div>
+            </div>           
         </div>
     </section>
     </div>
