adding photos on portfolio page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <section class="main">
         <div class="topic"><h1>About Me<br><hr></h1></div>
         <div class="content">    
-        <div class="imagebox"><p><img src=assets/images/author.png></p></div>
+        <div class="imagebox">
+            <p>
+                <img 
+                src="assets/images/author.png"
+                alt="Photo of Jeannette Kunzen"
+                >
+            </p>
+        </div>
             <p>Well how about that, you made it! 
             You found the personal and professional documentation of Jeannette Kunzen. 
             What you do with this information is subject to your own peril, but please- take a look around, feel free to get cozy and maybe light a candle. 
