comment and cleaning up code before turn-in

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="imagebox">
             <p>
                 <img 
-                src="assets/images/author.png"
+                src=assets/images/author.png
                 alt="Photo of Jeannette Kunzen"
                 >
             </p>
