--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
                     <div class="navtab3"><a href="contact.html">Contact</a></div>
         </div>
     <section class="main">
-        <div class="topic"><h1>Portfolio<br><hr></h1></div>
+        <div class="topic">
+            <h1>Portfolio<br><hr></h1>
+        </div>
         <div class="container">    
             <div class="image1">                   
                 <img               
@@ -24,8 +26,40 @@
                 width="250" height="180"             
                 >  
                 <div class="projectname">Rat 1</div>
-            </div>           
-        </div>
+            </div>    
+            <div class="image2">                   
+                <img               
+                src="assets/images/rat.png"             
+                alt="Second Rat"            
+                width="250" height="180"             
+                >  
+                <div class="projectname">Rat 2</div>
+            </div>
+            <div class="image3">
+                <img
+                src="assets/images/rat.png"
+                alt="Third Rat"
+                width="250" height="180"
+                >
+                <div class="projectname">Rat 3</div>
+            </div>
+            <div class="image4">
+                <img 
+                src="assets/images/Rat.png"
+                alt="Fourth Rat"
+                width="250" height="180"
+                >
+                <div class="projectname">Rat 4</div>
+            </div>
+            <div class="image5">
+                <img 
+                src="assets/images/Rat.png"
+                alt="Fifth Rat"
+                width="250" height="180"
+                >
+                <div class="projectname">Rat 5</div>
+            </div> 
+        </div>           
     </section>
     </div>
 
